--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react-datepicker": "^4.8.0",
+        "react-icons": "^4.7.1"
     }
 }
